hacky fix webkit overflow scroll

--- a/app/styles/animation.styl
+++ b/app/styles/animation.styl
@@ -1,3 +1,41 @@
+@keyframes empty {
+  from {
+    -webkit-transform translateX(0)
+  }
+  to {
+    -webkit-transform translateX(0)
+  }
+}
+@-webkit-keyframes empty {
+  from {
+    -webkit-transform translateX(0)
+  }
+  to {
+    -webkit-transform translateX(0)
+  }
+}
+
+@-moz-keyframes empty {
+  from {
+    -webkit-transform translateX(0)
+  }
+  to {
+    -webkit-transform translateX(0)
+  }
+}
+
+@-o-keyframes empty {
+  from {
+    -webkit-transform translateX(0)
+  }
+  to {
+    -webkit-transform translateX(0)
+  }
+}
+
+/**
+* Slide in from left
+*/
 @keyframes slideInLeft {
   from {
     opacity: 0;
